--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -29,10 +29,10 @@
                 <article class="aboutText">
                     Thank you for visiting my site !<br /><br />
                     I am a problem solver who does Engineering not only
-                    to make a living but also as passion and hoppy.<br /><br />
-                    I started my carrier back in 1999 by falling in love with Automation and programming PLCs.<br />
-                    Since then I have worked in veraity of projects from Embeded systems to Web Application.<br /><br />
-                    Readability and Scalability are the two main factor for me when I write Software or Firmware.
+                    to make a living but also as a passion and hoppy.<br /><br />
+                    I started my carrier back in 1999 by falling in love with Automation and Programming PLCs.<br />
+                    Since then I have worked on veraity of projects from Embeded systems to Desktop and Web Application.<br /><br />
+                    Readability and Scalability are the two main factor for me when I am writing Software or Firmware.
 
                 </article>
             </section>
@@ -95,7 +95,7 @@
                 <div *ngIf="show2008" class="role">Responsibalities:
                         <article style="color: rgb(123, 255, 0)">
                                 Worked within a large group of Engineers. <br/>
-                                As a Software Engineer. I was involved in Full cycle of warer fall Software Development.<br />
+                                As a Software Engineer. I was involved in Full cycle of water fall Software Development process.<br />
                                 Requirment , Design and Implementation for Mission Planner System for V-22 Aircraft<br />
                                
         
@@ -121,8 +121,8 @@
                 <div *ngIf="show2013" class="role">Responsibalities: 
                         <article style="color: rgb(123, 255, 0)">
                                 Design and Development of the next Generation of Call for Fire Trainers.<br />
-                                CFFT III is a Trainer/Simulator Environment designed to Train Joint Fires Observers. <br />
-                                Simulates war Enviroment in cost-effective way .<br/><br/>
+                                CFFT III is a Trainer/Simulator Environment designed to Train Joint Fire Observers. <br />
+                                Simulates War Enviroment in a very cost-effective way .<br/><br/>
                                 Developed in WPF Framework with Prism Modules , highley scalable.<br/> 
                                 I have been responsible for the Design and Development of multiple Featuers. <br />
                                 
