--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -13,6 +13,12 @@
     
 }
 
+.m1{
+    background: rebeccapurple;
+    width: 60px;
+    margin: 1rem;
+}
+
 
 
 
@@ -101,9 +107,16 @@ main{
 }
 
 .education{
-    display: grid;
-    height: 100vh;
+   
+    width: 900px;
+    height: 750px;
     margin-left: 2rem;
+    margin-top: 4rem;
+    border: #f4f8f4;
+    overflow: scroll;
+    border-style: groove;
+    background: rgba(42, 56, 252, 0.281);
+    border-radius: .2rem;
 }
 
 .educationGrid{
@@ -115,6 +128,22 @@ main{
     "main main main"
     "footer footer footer";
     grid-column-gap: 1rem;
+}
+
+.EducationFont{
+    font-family: 'Courier New', Courier, monospace;
+    font-size: larger;
+    color: #e6eff5;
+    font-weight: bold;
+    margin-left: 1rem;
+}
+
+.experinceHeaderFont{
+    font-family: 'Courier New', Courier, monospace;
+    font-size: x-large;
+    color: #460000;
+    font-weight: bold;
+    margin-left: 1rem;
 }
 
 .g1{
@@ -151,11 +180,35 @@ main{
 
 .img1{
    grid-area: main;
-   width: 100%;
+   width:70%;
    height: auto;
    margin-top: 1rem;
    margin-left: 2rem;
+   margin: 2rem;
+   border: rgb(226, 153, 17) solid 5px;
 
+}
+
+.img2{
+    grid-area: main;
+    width:50%;
+    height: 30%;
+    margin-top: 1rem;
+    margin-left: 2rem;
+    margin: 2rem;
+ 
+ }
+
+.divider{
+   
+    color: white;
+    border-width: 4px;
+    border-style: inset;
+    display: block;
+    margin-top: 0.5em;
+    margin-bottom: 0.5em;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 
@@ -166,7 +219,7 @@ main{
     height: auto;
 }
 
-.experince{
+.experince0{
     display: grid;
     margin-left: 2rem;
     grid-template-columns: minmax(auto,100px) minmax(auto,100px) minmax(auto,100px) minmax(auto,100px) minmax(auto,100px) minmax(auto,100px);
@@ -182,6 +235,18 @@ main{
   
     grid-column-gap: 1rem;
     height: 100vh;
+}
+
+.experince{
+    width: 900px;
+    height: 800px;
+    margin-left: 2rem;
+    margin-top: 6rem;
+    border: #f4f8f4;
+    overflow: scroll;
+    border-style: groove;
+    background: rgba(42, 56, 252, 0.281);
+
 }
 
 .b4{
