--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
+
 <div class="container">
 
+    
     <aside>
         <br>
         <p class="date">Today is {{currentDate}}
@@ -12,7 +14,10 @@
             <button class="navBtn btn-success" (click)="loadExperience()">Experience</button>
             <button class="navBtn btn-success" (click)="loadSkills()">Skills</button>
             <button class="navBtn btn-success" (click)="loadInterests()">Interests</button>
-            <button class="navBtn btn-success" (click)="loadContact()">Contact</button>
+            <button class="navBtn btn-success" (click)="loadContact()">Contact</button> 
+
+          
+
         </nav>
     </aside>
 
@@ -39,26 +44,100 @@
             <!-- about ends -->
 
             <!-- education starts -->
-            <section class="education" *ngIf="showEducation">
-                <header>
-                    <h1 class="display-3 text-uppercase">Purdue
-                        <span class="text-success">Univeristy</span>
-                    </h1>
-                </header>
+            <div class="education" *ngIf="showEducation">
+                <div>
+                    <header>
 
-                <div class="educationGrid">
-                    <button class="b b1 btn-success" (click)="ShowBachelorDegree()">Bachelor Degree</button>
-                    <button class="b b2 btn-warning" (click)="ShowSeniorDesign()">Senior Design</button>
-                    <button class="b b3 btn-danger" (click)="ShowMasterDegree()">Master Degree</button>
-                    <img class="img1" src={{educationImage}}>
-
+                        <h1 class="display-3 text-uppercase">Purdue
+                            <span class="text-success">Univeristy</span>
+                        </h1>
+                    </header>
+                    <p class="EducationFont">Bachelor of Science in Computer Engineering - 2005-2009</p>
+                    <img class="img1" src="../assets/i2.JPG">
                 </div>
-            </section>
+                
+                <hr class="divider">
+                
+                <div>
+                    <header>
+                        <h1 class="display-3 text-uppercase">Purdue
+                            <span class="text-success">Univeristy</span>
+                        </h1>
+                    </header>
+                    <p class="EducationFont">Master Degree - Software Engineering 2009 - 2010</p>
+                    <img class="img1" src="../assets/i1.JPG">
+                </div>
+
+                <hr class="divider">
+
+                <div>
+                        <header>
+                            <h1 class="display-3 text-uppercase">Purdue
+                                <span class="text-success">Univeristy</span>
+                            </h1>
+                        </header>
+                        <p class="EducationFont">Winner of Best Sceinor Design 2009 </p>
+                        <img class="img1" src="../assets/i3.JPG">
+                </div>
+               
+            </div>
             <!-- education ends -->
 
 
             <!-- experince starts -->
-            <section class="experince" *ngIf="showExperience">
+
+            <div  class="experince" *ngIf="showExperience">
+                    <div>
+                        <img class="img1" src="../assets/novaLogo.jpg">
+                        <div class="experinceHeaderFont">Nova Technologies , Orlando FL , 2013- present</div>
+                        <div class="experinceHeaderFont">Title: Software Engineer </div>
+                        <p class="EducationFont">
+                                Design and Development of the next Generation of Call for Fire Trainers.<br /><br />
+                                CFFT III is a Trainer/Simulator Environment designed to Train Joint Fire Observers. <br />
+                                Simulates War Enviroment in a very cost-effective way .<br/><br/>
+                                Developed in WPF Framework with Prism Modules , highley scalable.<br/> 
+                                I have been responsible for the Design and Development of multiple Featuers. <br />
+                                
+                                To name a few modules I worked on : Indirect Fire , Precision Strike, Message Center , Naval Fire 
+                        </p>
+                       
+                    </div>
+                        
+                    <hr class="divider">
+
+                    <div>
+                            <img class="img2" src="../assets/espnLogo.png">
+                            <div class="experinceHeaderFont">Altura Tech-ESPN  , Orlando FL , 2010- 2013</div>
+                            <div class="experinceHeaderFont">Title: Software Engineer</div>
+                            <p class="EducationFont">
+                                    Sports Statestics Software , Design and Development for ESPN network.<br />
+                                    Distributed sytem with WPF front End and WCF middleware and SQL database<br />
+                            </p>
+                           
+                     </div>
+
+                     <hr class="divider">
+
+                     <div>
+                            <img class="img2" src="../assets/raytheonLogo.jpg">
+                            <div class="experinceHeaderFont">Software Engineer , 2008- 2010</div>
+                            <p class="EducationFont">
+                                    Worked within a large group of Engineers. <br/>
+                                    As a Software Engineer. I was involved in Full cycle of water fall Software Development process.<br />
+                                    Requirment , Design and Implementation for Mission Planner System for V-22 Aircraft<br />
+                            </p>
+                           
+                     </div>
+
+            </div>
+
+                
+
+           
+
+
+
+            <!-- <section class="experince" *ngIf="showExperience">
                 <button class="b b4 btn-success" (click)="Show1999()">1999-2002</button>
                 <button class="b b5 btn-success" (click)="Show2002()">2002-2004</button>
                 <button class="b b6 btn-success" (click)="Show2008()">2008-2010</button>
@@ -147,8 +226,11 @@
                 <img *ngIf="showGithub" class="img2" src={{githubImage}}>
 
 
-            </section>
+            </section> -->
             <!-- experince ends -->
+
+           
+
 
             <!-- skills starts -->
             <section class="skills" *ngIf="showSkills">
